Progressive: fixing contents and spacing in progressive offer letter templates.

--- a/src/app/feature/credit-administration/cad-document-template/progressive/progressive-offer-letter/offer-letter-corporate/offer-letter-corporate-print/offer-letter-corporate-print.component.scss
+++ b/src/app/feature/credit-administration/cad-document-template/progressive/progressive-offer-letter/offer-letter-corporate/offer-letter-corporate-print/offer-letter-corporate-print.component.scss
@@ -1,1 +1,24 @@
 @import '../../progressive-offer-letter.component';
+
+.nepaliConfig {
+  font-size: 16px;
+  line-height: 1.6;
+  margin: 10px 50px;
+  @extend .text-justify;
+}
+
+.bodyParagraphTable {
+  text-align: justify;
+  line-height: 1.5;
+  max-width: 85%;
+}
+
+p {
+  text-align: justify;
+  line-height: 1.5;
+}
+
+span {
+  font-size: 24px;
+}
+
