--- a/src/app/feature/credit-administration/cad-document-template/progressive/progressive-offer-letter/offer-letter-personal/offer-letter-personal-print/offer-letter-personal-print.component.scss
+++ b/src/app/feature/credit-administration/cad-document-template/progressive/progressive-offer-letter/offer-letter-personal/offer-letter-personal-print/offer-letter-personal-print.component.scss
@@ -1,1 +1,16 @@
 @import "../../progressive-offer-letter.component";
+
+.bodyParagraphTable {
+  text-align: justify;
+  line-height: 1.5;
+}
+
+p {
+  text-align: justify;
+  line-height: 1.6;
+}
+
+span {
+  font-size: 24px;
+}
+
