--- a/src/app/feature/credit-administration/cad-document-template/progressive/progressive-offer-letter/progressive-offer-letter.component.scss
+++ b/src/app/feature/credit-administration/cad-document-template/progressive/progressive-offer-letter/progressive-offer-letter.component.scss
@@ -4,8 +4,8 @@
 
 .nepali {
   font-size: 16px;
-  line-height: 40px;
-  margin: 10px 50px;
+  line-height: 1.6;
+  margin: 6px 20px;
   @extend .text-justify;
 }
 
@@ -45,6 +45,10 @@
   }
 }
 
+.unicodeSize {
+  font-size: 18px;
+}
+
 
 .form-field {
   background: yellow;
@@ -78,6 +82,9 @@ input::-webkit-input-placeholder {
 @page {
   size: A4;
   margin: 17mm 17mm 17mm 17mm;
+}
+body {
+  padding-top:15mm;
 }
 
 .page-break {
